# pydantic-demo

./: .gitignore  README.md  i-18-step-contracts-gates.md  i-19-structured-prompts.md  i-20-checkpointing-resume.md  i-30-capture-sources.md  i-32-add-workflow-gates.md  pyproject.toml  research.py
deep_research/: cli.py  errors.py  models.py  prompts.py  researcher.py  validators.py
tests/: test_validators.py
