[project]
name = "deep-research"
version = "0.1.0"
description = "Deep research agent using Pydantic AI"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pydantic_ai_slim[openai,duckduckgo]",
    "logfire",
    "python-dotenv",
]


[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
research = "deep_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
